--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 title: Long Haul
 description: Long Form Jekyll theme built with SASS / COMPASS / SUSY
 
-url: http://brianmaierjr.github.com/long-haul
+#url: http://brianmaierjr.github.com/long-haul
+url: https://hoya012.github.io/
 baseurl: ""
 paginate_path: "blog/page:num/"
 permalink: blog/:title/
@@ -20,9 +21,9 @@ navigation:
    url: /contact
 
 social:
-   github: brianmaierjr
-   twitter: brianmaierjr
-   facebook: brianmaierjr
-   email: brimaidesigns@gmail.com
+   github: hoya012
+   #twitter: brianmaierjr
+   facebook: 2.hoseong
+   email: lee.hoseong@sualab.com
 
 google_analytics: "UA-58263416-1"
