--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Long Haul
-description: Long Form Jekyll theme built with SASS / COMPASS / SUSY
+title: Hoya's Deep Learning Study Blog
+description: Study Blog with paper reviews.
 
 #url: http://brianmaierjr.github.com/long-haul
 url: https://hoya012.github.io/
