--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Hoya's Deep Learning Study Blog
+title: Hoya012's Research Blog
 description: Study Blog with paper reviews.
 
 #url: http://brianmaierjr.github.com/long-haul
