--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,16 @@ gems:
  - jekyll-archives
 paginate: 10
 
+# Archive settings (see https://github.com/jekyll/jekyll-archives/)
+jekyll-archives:
+  enabled:
+    - categories
+    - tags
+  layout: 'archive'
+  permalinks:
+    category: '/category/:name/'
+    tag: '/tag/:name/'
+
 navigation:
  - title: Home
    url: /index.html
