--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,17 @@ jekyll-archives:
   permalinks:
     category: '/category/:name/'
     tag: '/tag/:name/'
+    
+# Category descriptions (for archive pages)
+descriptions:
+  - cat: object detection
+    desc: ""
+
+  - cat: classification
+    desc: ""
+
+  - cat: etc
+    desc: ""
 
 navigation:
  - title: Home
