--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ navigation:
    url: /index.html
  - title: About
    url: /about
- - title: Contact
+ - title: Archives
    url: /contact
 
 social:
