--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,8 @@ navigation:
  - title: About
    url: /about
  - title: Archives
-   url: /contact
+   url: /archives
+   #url: /contact
 
 social:
    github: hoya012
