update e-mail address

--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,6 @@ social:
    github: hoya012
    #twitter: brianmaierjr
    facebook: 2.hoseong
-   email: lee.hoseong@sualab.com
+   email: hoseong.lee@cognex.com
 
 google_analytics: "UA-58263416-1"
